# NewJS

./: .gitignore  CMakeLists.txt  README.md  test.ll
docs/: llvm.md  newjs.md
example/: fib.njs  test.njs
example/aoc-2015/: Makefile
example/aoc-2015/src/: day_1.njs  day_2.njs  main.njs
example/aoc/2015/: .gitignore  Makefile  main.njs
example/crypto/: .gitignore  main
example/crypto/src/: key.njs  main.njs  random.njs  user.njs  xor.njs
example/math/: Makefile  main
example/math/src/: main.njs  mat4.njs  vec2.njs  vec3.njs  vec4.njs
example/pathtracer/: .gitignore  Makefile
example/pathtracer/src/: aabb.njs  bvh.njs  camera.njs  checker_texture.njs  color.njs  common.njs  dielectric.njs  diffuse_light.njs  hit_record.njs  hittable.njs  hittable_list.njs  image.njs  image_texture.njs  interval.njs  lambertian.njs  main.njs  material.njs  math.njs  memory.njs  metal.njs  noise_texture.njs  perlin.njs  ppm.njs  pthread.njs  quad.njs  ray.njs  record.njs  rotate_y.njs  rtw_image.njs  solid_color.njs  sphere.njs  texture.njs  time3.njs  translate.njs  vec3.njs
example/test/: .gitignore  Makefile
example/test/lib/: .gitignore
example/test/src/: gl.njs  glfw3.njs  main.njs  vec.njs
example/threads/src/: main.njs
example/window/: Makefile
example/window/src/: main.njs  vec.njs
include/NJS/: AST.hpp  ArgParser.hpp  Builder.hpp  Context.hpp  Error.hpp  Import.hpp  Info.hpp  Linker.hpp  Macro.hpp  ModuleInfo.hpp  NJS.hpp  Operator.hpp  Param.hpp  Parameter.hpp  Parser.hpp  SourceLocation.hpp  Std.hpp  Template.hpp  TemplateContext.hpp  Token.hpp  Type.hpp  TypeContext.hpp  TypeId.hpp  Value.hpp
include/newjs/: arg_parser.hpp  ast.hpp  builder.hpp  error.hpp  import.hpp  info.hpp  linker.hpp  location.hpp  macro.hpp  newjs.hpp  operator.hpp  parameter.hpp  parser.hpp  pass_manager.hpp  std.hpp  template.hpp  template_context.hpp  token.hpp  type.hpp  type_context.hpp  value.hpp
lib/: file.cpp  format.cpp  io.cpp  parse.cpp  print.cpp  println.cpp
src/: arg_parser.cpp  builder.cpp  context.cpp  error.cpp  import.cpp  info.cpp  linker.cpp  macro.cpp  main.cpp  operator.cpp  print.cpp  source_location.cpp  template.cpp  template_context.cpp  token.cpp  type_context.cpp
src/ast/: ast.cpp  ast_print.cpp  binary.cpp  bool.cpp  boolean.cpp  call.cpp  cast.cpp  cast_expr.cpp  char.cpp  const_boolean.cpp  const_char.cpp  const_fp.cpp  const_function.cpp  const_int.cpp  const_number.cpp  const_object.cpp  const_string.cpp  const_struct.cpp  const_tuple.cpp  floating_point.cpp  for.cpp  for_in_of.cpp  format.cpp  fp.cpp  function.cpp  if.cpp  import.cpp  int.cpp  integer.cpp  member.cpp  return.cpp  scope.cpp  sizeof.cpp  string.cpp  struct.cpp  subscript.cpp  switch.cpp  symbol.cpp  ternary.cpp  tuple.cpp  (+4 more)
src/builder/: builder.cpp  create_alloca.cpp  create_cast.cpp  create_empty.cpp  create_global.cpp  create_helper.cpp  create_member.cpp  create_module_call.cpp  create_subscript.cpp  create_vector.cpp  get_or_create_function.cpp  stack_frame.cpp
src/cli/: arg_parser.cpp  main.cpp
src/common/: error.cpp  import.cpp  info.cpp  linker.cpp  macro.cpp  operator.cpp  pass_manager.cpp  print.cpp  source_location.cpp  template.cpp  template_context.cpp  type_context.cpp
src/common/ast/: asm.cpp  ast.cpp  binary.cpp  boolean.cpp  break.cpp  cache.cpp  call.cpp  cast.cpp  char.cpp  class.cpp  (+25 more)
src/param/: destructure_array.cpp  destructure_object.cpp  destructure_struct.cpp  destructure_tuple.cpp  param.cpp  param_print.cpp  parameter.cpp
src/parser/: parse_binary.cpp  parse_const_function.cpp  parse_const_object.cpp  parse_const_struct.cpp  parse_const_tuple.cpp  parse_expr.cpp  parse_expression.cpp  parse_for.cpp  parse_format.cpp  parse_function.cpp  parse_if.cpp  parse_import.cpp  parse_interface.cpp  parse_line.cpp  parse_macro.cpp  parse_operand.cpp  parse_param.cpp  parse_parameter.cpp  parse_primary.cpp  parse_return.cpp  parse_scope.cpp  parse_statement.cpp  parse_stmt.cpp  parse_struct.cpp  parse_switch.cpp  parse_tuple.cpp  parse_type.cpp  parse_type_alias.cpp  parse_unary.cpp  parse_variable.cpp  parse_while.cpp  parser.cpp  parser_escape.cpp  parser_next.cpp  sizeof.cpp
src/standard/: format.cpp  io.cpp  parse.cpp
src/type/: array_type.cpp  floating_point_type.cpp  fp_type.cpp  function_type.cpp  incomplete_type.cpp  int_type.cpp  integer_type.cpp  multi_type.cpp  no_type.cpp  object_type.cpp  pointer_type.cpp  primitive_type.cpp  ptr_type.cpp  ref_type.cpp  reference_type.cpp  struct_type.cpp  tuple_type.cpp  type.cpp  vector_type.cpp  void_type.cpp
src/value/: lvalue.cpp  rvalue.cpp  value.cpp
(+69 files in other folders)
